--- a/OpenXCHackathon/AndroidManifest.xml
+++ b/OpenXCHackathon/AndroidManifest.xml
@@ -13,15 +13,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.drivencomputing.openxchackathon.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <service
+ 		android:name="MyService"
+  		android:icon="@drawable/icon"
+  		android:label="@string/service_name"
+  		>
+	</service> 
     </application>
 
 </manifest>
